# ComfyUI-NukeNodePack

./: LICENSE  NOTICE  NOTICE.md  README.md  __init__.py  pyproject.toml  requirements.txt
example_workflows/: master_workflow.json
examples/: 01_roto_basic.json  02_relight_three_point.json  03_audio_reactive.json  04_flow_warp.json  README.md
nukemax/: __init__.py  _progress.py  runtime.py
nukemax/core/: __init__.py  blur.py  color.py  composite.py  fft.py  flow.py  nkscript.py  shading.py  splines.py
nukemax/nodes/: types_io.py
nukemax/nodes/audio/: README.md  __init__.py
nukemax/nodes/color/: __init__.py  color_science.py
nukemax/nodes/deep/: __init__.py
nukemax/nodes/edges/: README.md  __init__.py
nukemax/nodes/fft/: README.md  __init__.py
nukemax/nodes/flow/: README.md  __init__.py
nukemax/nodes/geometry_ext/: __init__.py  geometry_nodes.py
nukemax/nodes/io/: __init__.py  exr_io.py  exr_metadata_reader.py
nukemax/nodes/metadata/: __init__.py  metadata_nodes.py
nukemax/nodes/nkscript/: __init__.py
nukemax/nodes/passes/: __init__.py  render_pass.py
nukemax/nodes/plate/: __init__.py  plate_tools.py
nukemax/nodes/relight/: README.md  __init__.py
nukemax/nodes/roto/: README.md  __init__.py
nukemax/nodes/shuffle/: __init__.py
nukemax/nodes/utils/: __init__.py  (+1 more)
nukemax/types/: __init__.py  audio_features.py  deep_image.py  fft_tensor.py  flow_field.py  light_probe.py  light_rig.py  material_set.py  roto_shape.py  serialize.py  tracking_data.py
nukemax/utils/: resilience.py
scripts/: _check_env.py  _inspect_enums.py  _live_mega_graph.py  _live_test_all_nodes.py  _probe_object_info.py  _smoke_import.py  in_comfy_dir.bat
tests/: diag_nukemax.py  test_nuke_conventions.py  test_nuke_parity.py  test_parity_loop.py  test_phase0_foundation.py  test_phase1_roto.py  test_phase2_fft.py  test_phase3_relight.py  test_phase4_audio.py  test_phase5_flow.py  test_phase6_edges.py
web/: nukemax.js
(+4 files in other folders)
