[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "comfyui-nukemax-nodes"
version = "0.4.0"
description = "Hybrid VFX/AI bridge nodes for ComfyUI: roto, FFT-guided gen, PBR relight, audio-reactive, optical flow compositing, smart edges."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Code2Collapse" }]
dependencies = [
    "torch>=2.0",
    "numpy>=1.24",
    "opencv-python>=4.8",
    "pillow>=10.0",
]

[project.urls]
Repository = "https://github.com/Code2Collapse/ComfyUI-NukeNodePack"
Issues = "https://github.com/Code2Collapse/ComfyUI-NukeNodePack/issues"

[tool.comfy]
PublisherId = "Code2Collapse"
DisplayName = "NukeMax Nodes"
Icon = "https://i.pinimg.com/736x/5d/52/19/5d5219ef27c1530bea027ff95d352e05.jpg"

[project.optional-dependencies]
audio = ["librosa>=0.10", "soundfile>=0.12"]
flow = ["opencv-python-headless>=4.8"]
test = ["pytest>=7", "scipy>=1.10"]

[tool.setuptools.packages.find]
include = ["nukemax*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
